--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hackathonstarter"]
-	path = hackathonstarter
-	url = https://github.com/joincolony/hackathonstarter
+[submodule "hackathonStarter"]
+	path = hackathonStarter
+	url = https://github.com/JoinColony/hackathonStarter
