--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
     "font-awesome": "^4.7.0",
