--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^5.3.1",
     "font-awesome": "^4.7.0",
     "i18n": "^0.8.3",
+    "lodash": "^4.17.10",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^3.0.1",
     "uport-connect": "^0.8.4",
