--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hackathonStarter"]
-	path = hackathonStarter
-	url = https://github.com/JoinColony/hackathonStarter
+[submodule "colonyStarter"]
+	path = colonyStarter
+	url = https://github.com/JoinColony/colonyStarter
