--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "dotenv": "^6.0.0",
-    "firebase": "^5.3.1",
+    "firebase": "^5.4.0",
     "font-awesome": "^4.7.0",
     "i18n": "^0.8.3",
     "lodash": "^4.17.10",
@@ -32,10 +32,14 @@
     "vue-i18n": "^8.0.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vue-uuid": "^1.0.0",
     "vuex": "^3.0.1",
     "web3": "^0.20.5"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
     "@storybook/vue": "^3.4.10",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.3",
@@ -50,6 +54,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-vue": "^2.0.2",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
@@ -95,11 +100,7 @@
     "webpack": "~3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "babel-preset-vue": "^2.0.2"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
