--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-i18n": "^8.0.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vue-ui": "file:../vue-ui",
     "vue-uuid": "^1.0.0",
     "vuex": "^3.0.1",
     "web3": "^0.20.5"
