--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
     "firebase": "^5.4.0",
     "font-awesome": "^4.7.0",
@@ -25,7 +26,7 @@
     "qrcode-terminal": "^0.12.0",
     "typescript": "^3.0.1",
     "uport-connect": "^0.8.4",
-    "vee-validate": "^2.1.0-beta.7",
+    "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
     "vue-i18n": "^8.0.0",
     "vue-moment": "^4.0.0",
