--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
     "firebase": "^5.4.0",
     "font-awesome": "^4.7.0",
     "i18n": "^0.8.3",
     "lodash": "^4.17.10",
+    "moment": "latest",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^3.0.1",
-    "uport-connect": "^0.8.4",
+    "uport-connect": "^0.7.6",
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
     "vue-i18n": "^8.0.0",
