--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "dotenv": "^6.0.0",
     "firebase": "^5.4.0",
     "font-awesome": "^4.7.0",
-    "i18n": "^0.8.3",
     "lodash": "^4.17.10",
     "moment": "latest",
     "qrcode-terminal": "^0.12.0",
@@ -39,6 +38,7 @@
     "web3": "^0.20.5"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@storybook/addon-actions": "^3.4.10",
     "@storybook/addon-links": "^3.4.10",
     "@storybook/addons": "^3.4.10",
