--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
     "vue-uuid": "^1.0.0",
+    "vue2-datepicker": "^2.4.0",
     "vuex": "^3.0.1",
     "web3": "^0.20.5"
   },
