--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
@@ -30,11 +31,13 @@
     "moment": "latest",
     "npm": "^6.4.1",
     "qrcode-terminal": "^0.12.0",
+    "truffle-contract": "^3.0.6",
+    "truffle-hdwallet-provider": "0.0.6",
     "typescript": "^3.0.1",
     "uport-connect": "^0.7.6",
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.1.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
