--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -11,14 +11,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "airtable": "^0.5.6",
-    "dotenv": "^6.0.0",
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
+    "firebase-admin": "~5.13.0",
+    "firebase-functions": "^2.0.0"
   },
   "devDependencies": {
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "tslint": "~5.8.0",
+    "typescript": "~2.8.3"
   },
   "private": true
 }
