--- a/functions/package.json
+++ b/functions/package.json
@@ -1,24 +1,17 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "firebase serve --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/index.js",
   "dependencies": {
-    "airtable": "^0.5.6",
-    "dotenv": "^6.0.0",
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
-  },
-  "devDependencies": {
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.0.3",
+    "twilio": "^3.19.2"
   },
   "private": true
 }
