--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3",
-    "twilio": "^3.19.2"
+    "firebase-functions": "~2.0.3",
+    "twilio": "~3.19.2"
   },
   "private": true
 }
