--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
-    "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.0",
-    "bluebird": "^3.5.1",
-    "dotenv": "^6.0.0",
-    "firebase": "^5.4.0",
+    "@sendgrid/mail": "~6.3.1",
+    "axios": "~0.18.0",
+    "bluebird": "~3.5.1",
+    "dotenv": "~6.0.0",
+    "firebase": "~5.4.0",
     "font-awesome": "^4.7.0",
-    "i": "^0.3.6",
-    "lodash": "^4.17.10",
-    "moment": "latest",
+    "i": "~0.3.6",
+    "lodash": "~4.17.10",
+    "moment": "~2.22.2",
     "npm": "^6.4.1",
     "qrcode-terminal": "^0.12.0",
-    "truffle-contract": "^3.0.6",
+    "truffle-contract": "~3.0.6",
     "truffle-hdwallet-provider": "0.0.6",
     "typescript": "^3.0.1",
-    "uport-connect": "^0.8.4",
+    "uport-connect": "~0.8.4",
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
@@ -42,7 +42,6 @@
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
     "vue-uuid": "^1.0.0",
-    "vue2-datepicker": "^2.4.0",
     "vuex": "^3.0.1",
     "web3": "^0.20.5"
   },
