--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ storybook-static
 .env
 sendgrid.env
 /contracts/truffle.js
+/contracts/truffle-ropsten.js
 
 # Editor directories and files
 .idea
