--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
+    "vue-loading-overlay": "^2.2.1",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
