--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "@sendgrid/mail": "~6.3.1",
     "axios": "~0.18.0",
+    "bignumber.js": "^7.2.1",
     "bluebird": "~3.5.1",
     "dotenv": "~6.0.0",
     "express": "^4.16.3",
@@ -39,6 +40,7 @@
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
+    "vue-loading-overlay": "^2.2.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
