updated docs site

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "@johmun/vue-tags-input": "^1.5.5",
     "@sendgrid/mail": "~6.3.1",
-    "axios": "~0.18.0",
+    "axios": "^0.18.0",
     "bignumber.js": "^7.2.1",
     "bluebird": "~3.5.1",
     "dotenv": "~6.0.0",
@@ -114,7 +115,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuepress": "^0.14.4",
-    "webpack": "~3.12.0",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
