--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Farah Brunache",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "devpwa": "cp service-worker-dev.js service-worker.js",
     "start": "node server.js",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
@@ -74,8 +75,9 @@
     "babel-preset-vue": "^2.0.2",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.42.0",
-    "copy-webpack-plugin": "^4.5.3",
+    "chromedriver": "^2.27.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "cp": "^0.2.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
