--- a/package.json
+++ b/package.json
@@ -18,31 +18,32 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
-    "@johmun/vue-tags-input": "^1.5.5",
+    "@johmun/vue-tags-input": "^1.5.6",
     "@sendgrid/mail": "~6.3.1",
     "axios": "^0.18.0",
     "bignumber.js": "^7.2.1",
     "bluebird": "~3.5.1",
     "dotenv": "~6.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "firebase": "~5.4.0",
     "font-awesome": "^4.7.0",
     "http-server": "^0.11.1",
     "i": "~0.3.6",
-    "lodash": "~4.17.10",
+    "lodash": "^4.17.11",
     "moment": "~2.22.2",
     "npm": "^6.4.1",
     "qrcode-terminal": "^0.12.0",
     "truffle-contract": "~3.0.6",
     "truffle-hdwallet-provider": "0.0.6",
-    "typescript": "^3.0.1",
+    "typescript": "^3.1.3",
     "uport-connect": "~0.8.4",
-    "vee-validate": "^2.1.0-beta.8",
+    "vee-validate": "^2.1.0-beta.11",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
+    "vue-instantsearch": "^1.7.0",
     "vue-loading-overlay": "^2.2.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
@@ -53,10 +54,10 @@
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "@storybook/vue": "^3.4.10",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/vue": "^3.4.11",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.1",
@@ -73,8 +74,8 @@
     "babel-preset-vue": "^2.0.2",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
-    "copy-webpack-plugin": "^4.0.1",
+    "chromedriver": "^2.42.0",
+    "copy-webpack-plugin": "^4.5.3",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
@@ -104,7 +105,7 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
+    "semver": "^5.6.0",
     "shelljs": "^0.7.6",
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-loader": "4.4.2",
