--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "font-awesome": "^4.7.0",
     "http-server": "^0.11.1",
     "i": "~0.3.6",
+    "install": "^0.12.2",
     "lodash": "^4.17.11",
     "moment": "~2.22.2",
+    "node-pre-gyp": "^0.11.0",
     "npm": "^6.4.1",
     "qrcode-terminal": "^0.12.0",
     "truffle-contract": "~3.0.6",
@@ -46,6 +48,7 @@
     "vue-instantsearch": "^1.7.0",
     "vue-loading-overlay": "^2.2.2",
     "vue-moment": "^4.0.0",
+    "vue-multianalytics": "^1.9.7",
     "vue-router": "^3.0.1",
     "vue-ui": "git+https://github.com/electricfeelco/vue-ui.git",
     "vue-uuid": "^1.0.0",
@@ -93,7 +96,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
-    "nightwatch": "^0.9.12",
+    "nightwatch": "^1.0.11",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -110,9 +113,10 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-loader": "4.4.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-jest": "^1.0.2",
     "vue-loader": "^14.2.2",
+    "vue-multianalytics": "^1.9.7",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuepress": "^0.14.4",
